--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="back-rec1"></div>
     <div class="back-rec2"></div>
   </div>
-  <header>
+  <div class="header">
     <a href="/" class="logo">
       <h3>ROXY</h3>
     </a>
@@ -54,7 +54,7 @@
         </span>
       </li>
     </ul>
-  </header>
+  </div>
   <div class="background2">
     <div class="text-container">
       <span class="text1">A template built by 
