--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
   <div class="header">
     <a href="/" class="logo">
-      <h3>ROXY</h3>
+      <h3>FEDV</h3>
     </a>
     <ul class="menu">
       <li class="nav-item">
@@ -57,9 +57,9 @@
   </div>
   <div class="background2">
     <div class="text-container">
-      <span class="text1">A template built by 
+      <div class="text1">A template built by 
         <span>YeongMin.Koh</span>
-      </span>
+      </div>
       <span class="text2">website template is only made by html, css with using microsoft VS code<br/>
         not using other framework such as bootstrap, react, vue </span>
     </div>
@@ -141,21 +141,22 @@
   </div>
   <div class="background5">
     <img class="bg" src="/images/arch.png" alt="arch">
-      <span class="M">My Works</span>
-      <img class="code" src="/images/code_purple.svg" alt="code">
-      <span class="B">Best Code that I told Everytime is the things seems too hard<br/>
-        or Professional But it is that easy to everyone to see</span>
-      <div class="picture">
-        <div class="face-container"></div>
+    <span class="M">My Works</span>
+    <img class="code" src="/images/code_purple.svg" alt="code">
+    <span class="B">Best Code that I told Everytime is the things seems too hard<br/>
+      or Professional But it is that easy to everyone to see</span>
+    <div class="picture">
+      <div class="face-container">
         <img class="face" src="/images/face.png" alt="face">
-        <span class="Y">YeongMin Koh<br/>
-          SoftWare Engineer FE dev.</span>
       </div>
-      <div class="btn">
-        <div class="btn1"></div>
-        <div class="btn2"></div>
-        <div class="btn3"></div>
-      </div>
+      <span class="Y">YeongMin Koh<br/>
+        SoftWare Engineer FE dev.</span>
+    </div>
+    <div class="btn">
+      <div class="btn1"></div>
+      <div class="btn2"></div>
+      <div class="btn3"></div>
+    </div>
     <div class="oap">
       <div class="O">Our <span>Awesome</span> Project</div>
       <div class="B">Best Code that I told Everytime is the things seems too hard<br/>
