--- a/index.html
+++ b/index.html
@@ -65,46 +65,46 @@
     </div>
     <div class="box-container">
       <div class="el-container1">
-        <img src="/images/code_black_36dp.svg" alt="code">
-        <span class="E">Easy to Customize</span>
-        <span class="Y">you can easily handle<br/>
+        <img src="./images/code_black_36dp.svg" alt="code">
+        <div class="E">Easy to Customize</div>
+        <div class="Y">you can easily handle<br/>
           which I gave. Even if you don't have<br/>
-          knowledge of develops</span>
+          knowledge of develops</div>
       </div>
       <div class="el-container2">
-        <img src="/images/analytics_black_24dp.svg" alt="feedback">
-        <span class="S">Study of FE</span>
-        <span class="Y">you can easily handle<br/>
+        <img src="./images/analytics_black_24dp.svg" alt="feedback">
+        <div class="S">Study of FE</div>
+        <div class="Y">you can easily handle<br/>
           which I gave. Even if you don't have<br/>
-          knowledge of develops</span>
+          knowledge of develops</div>
       </div>
       <div class="el-container3">
-        <img src="/images/feedback_black_24dp.svg" alt="feedback">
-        <span class="O">1:1 Comments</span>
-        <span class="Y">you can easily handle<br/>
+        <img src="./images/feedback_black_24dp.svg" alt="feedback">
+        <div class="O">1:1 Comments</div>
+        <div class="Y">you can easily handle<br/>
           which I gave. Even if you don't have<br/>
-          knowledge of develops</span>
+          knowledge of develops</div>
       </div>
       <div class="el-container4">
-        <img src="/images/dashboard_black_24dp.svg" alt="feedback">
-        <span class="G">Great Exprience</span>
-        <span class="Y">you can easily handle<br/>
+        <img src="./images/dashboard_black_24dp.svg" alt="feedback">
+        <div class="G">Great Exprience</div>
+        <div class="Y">you can easily handle<br/>
           which I gave. Even if you don't have<br/>
-          knowledge of develops</span>
+          knowledge of develops</div>
       </div>
       <div class="el-container5">
-        <img src="/images/star_rate_black_24dp.svg" alt="feedback">
-        <span class="P">Personal Project</span>
-        <span class="Y">you can easily handle<br/>
+        <img src="./images/star_rate_black_24dp.svg" alt="feedback">
+        <div class="P">Personal Project</div>
+        <div class="Y">you can easily handle<br/>
           which I gave. Even if you don't have<br/>
-          knowledge of develops</span>
+          knowledge of develops</div>
       </div>
       <div class="el-container6">
-        <img src="/images/filter_alt_black_24dp.svg" alt="feedback">
-        <span class="M">Minimalize Tool</span>
-        <span class="Y">you can easily handle<br/>
+        <img src="./images/filter_alt_black_24dp.svg" alt="feedback">
+        <div class="M">Minimalize Tool</div>
+        <div class="Y">you can easily handle<br/>
           which I gave. Even if you don't have<br/>
-          knowledge of develops</span>
+          knowledge of develops</div>
       </div>
     </div>
   </div>
