--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           knowledge of develops</div>
       </div>
       <div class="el-container2">
-        <img src="./images/analytics_black_24dp.svg" alt="feedback">
+        <img src="./images/analytics_black_24dp.svg" alt="analytics">
         <div class="S">Study of FE</div>
         <div class="Y">you can easily handle<br/>
           which I gave. Even if you don't have<br/>
