--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 </head>
 <body>
+<!-- 1페이지 -->
   <div class="background1">
     <div class="rectangle1"></div>
     <div class="rectangle2"></div>
@@ -55,6 +56,7 @@
       </li>
     </ul>
   </div>
+  <!-- 2페이지 -->
   <div class="background2">
     <div class="text-container">
       <div class="text1">A template built by 
@@ -108,6 +110,7 @@
       </div>
     </div>
   </div>
+  <!-- 3페이지 -->
   <div class="background3">
     <img class="bg" src="/images/gradient-bg image@2x.png" alt="bg">
     <div class="bg-gradient"></div>
@@ -121,6 +124,7 @@
     </div>
     <img class="app"src="/images/app_ui.png" alt="app">
   </div>
+  <!-- 4페이지 -->
   <div class="background4">
     <img class="app" src="/images/app_ui_black.png" alt="app">
     <span class="M">Make what you imagine<br/>
@@ -139,6 +143,7 @@
       </div>
     </div>
   </div>
+  <!-- 5페이지 -->
   <div class="background5">
     <img class="bg" src="/images/arch.png" alt="arch">
     <span class="M">My Works</span>
