4강 페이지 반응성 개선

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PortFolio</title>
 
@@ -114,32 +115,36 @@
   <div class="background3">
     <img class="bg" src="/images/gradient-bg image@2x.png" alt="bg">
     <div class="bg-gradient"></div>
-    <span class="C">Capture every moment and<br/>
-      share though you wear mask</span>
-    <span class="S">Sharing is good for initialize your thinking process<br/>
-      every moment you live you can pick your best<br/>
-      shot, and take in collection which you know Journey</span>
-    <button class="btn">
-      FEATURES
-    </button>
-    <img class="app"src="/images/app_ui.png" alt="app">
+    <div class="container">
+      <span class="C">Capture every moment and<br/>
+        share though you wear mask</span>
+      <span class="S">Sharing is good for initialize your thinking process<br/>
+        every moment you live you can pick your best<br/>
+        shot, and take in collection which you know Journey</span>
+      <button class="btn">
+        FEATURES
+      </button>
+      <img class="app"src="/images/app_ui.png" alt="app">
+    </div>
   </div>
   <!-- 4페이지 -->
   <div class="background4">
-    <img class="app" src="/images/app_ui_black.png" alt="app">
-    <span class="M">Make what you imagine<br/>
-      Imagine is not the way it exists</span>
-    <span class="T">Tool is being for you who makes what you imagine<br/>
-      The Point is your Thinking not only using skills of Tools<br/>
-      Coding is same as tools and just for</span>
-    <div class="graphback1">
-      <div class="graphfront1">
-        <span>HTML 85%</span>
+    <div class="container">
+      <img class="app" src="/images/app_ui_black.png" alt="app">
+      <span class="M">Make what you imagine<br />
+        Imagine is not the way it exists</span>
+      <span class="T">Tool is being for you who makes what you imagine<br />
+        The Point is your Thinking not only using skills of Tools<br />
+        Coding is same as tools and just for</span>
+      <div class="graphback1">
+        <div class="graphfront1">
+          <span>HTML 85%</span>
+        </div>
       </div>
-    </div>
-    <div class="graphback2">
-      <div class="graphfront2">
-        <span>CSS 90%</span>
+      <div class="graphback2">
+        <div class="graphfront2">
+          <span>CSS 90%</span>
+        </div>
       </div>
     </div>
   </div>
@@ -164,7 +169,7 @@
     </div>
     <div class="oap">
       <div class="O">Our <span>Awesome</span> Project</div>
-      <div class="B">Best Code that I told Everytime is the things seems too hard<br/>
+      <div class="Best">Best Code that I told Everytime is the things seems too hard<br/>
         or Professional But it is that easy to everyone to see</div>
       <div class="ui-ux">UI&emsp;UX&emsp;interactive&emsp;FrontEnd</div>
     </div>
