--- a/index.html
+++ b/index.html
@@ -16,14 +16,24 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="/css/main.css">
 
+  <!-- js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.2/gsap.min.js" integrity="sha512-kVlGhj2qFy+KBCFuvjBJTGUMxbdqJKs4yK2jh0e0VPhWUPiPC87bzm4THmaaIee3Oj7j6sDpTTgm2EPPiESqBg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script defer src="./js/main.js"></script>
+
 </head>
 <body>
 <!-- 1페이지 -->
   <div class="background1">
-    <div class="rectangle1"></div>
-    <div class="rectangle2"></div>
-    <div class="text-rec">
-      <div class="text">YM<br/>KH</div>
+    <div class="fadeIn">
+      <div class="rectangle1"></div>
+    </div>
+    <div class="fadeIn">
+      <div class="rectangle2"></div>
+    </div>
+    <div class="fadeIn">
+      <div class="text-rec">
+        <div class="text">YM<br/>KH</div>
+      </div>
     </div>
     <div class="back-rec1"></div>
     <div class="back-rec2"></div>
