badge 애니메이션

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 <body>
 <!-- 1페이지 -->
   <div class="background1">
+    <div class="badge">
+      <img src="./images/badge.png" alt="badge-image">
+    </div>
     <div class="fadeIn">
       <div class="rectangle1"></div>
     </div>
